2012-03-05 John Wu <John dot Wu at ACM dot org>
	* src/MinGW.mak: restore MinGW.mak to the version from SVN 444,
	the last version from Dominique work with cross compilers on
	ubuntu instead of on MinGW/MS Win

2012-03-01 Dominique Prunier <dominique dot prunier at watch4net dot com>
	* src/column.cpp:4213 covert the return value ierr from 0 to
	vals.size() to match the interface documentation

2012-02-17 John Wu <John dot Wu at ACM dot org>
	* runconfig: change the install directory on datax

2012-02-14 John Wu <John dot Wu at ACM dot org>
	* src/part.cpp, src/column.cpp, src/category.cpp: truncate
	description to avoid writing extremely long description line
	* tests/Makefile.am: update case 2 of check-ibis to accommodate
	mixing of output from stdout with stderr
	* src/part.cpp: updateMetaData and setMeshShape invoke write lock
	before calling writeMetaData
	* src/capi.cpp: invoke updateMetaData when fastbit_build_index
	came with an explicit indexing option
	* src/qExpr.cpp: add function overlap to ibis::qContinuousRange
	and ibis::qDiscreteRange
	* src/column.cpp: check that the query ranges are not outside of
	the column value ranges

2012-02-13 Dominique Prunier <dominique dot prunier at watch4net dot com>
	* src/capi.cpp:260 check null pointer before attempt to build
	indexes

2012-02-10 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: update column::write to handle unsigned types
	separately, add specific cases for min and max of LONG and ULONG
	(as doubles)
	* src/category.cpp: update category::write to limit the size of
	description to be no more than a couple of hundred characters

2012-02-09 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: capture min and max after index creation.

2012-02-07 John Wu <John dot Wu at ACM dot org>
	* src/util.cpp: change the default log output to stderr (following
	the C++ iostream convention where cerr and clog are the same
	stream)
	* tests/Makefile.am: change the log file from stdout.log to
	std.log